--- a/qtDesigner/MainWindow.ui
+++ b/qtDesigner/MainWindow.ui
@@ -14,7 +14,7 @@
    <string>MainWindow</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="../resources.qrc">
+   <iconset resource="resources.qrc">
     <normaloff>:/newPrefix/images/Play.png</normaloff>:/newPrefix/images/Play.png</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
@@ -25,7 +25,7 @@
        <string/>
       </property>
       <property name="icon">
-       <iconset resource="../resources.qrc">
+       <iconset resource="resources.qrc">
         <normaloff>:/newPrefix/images/Play.png</normaloff>:/newPrefix/images/Play.png</iconset>
       </property>
      </widget>
@@ -36,7 +36,7 @@
        <string/>
       </property>
       <property name="icon">
-       <iconset resource="../resources.qrc">
+       <iconset resource="resources.qrc">
         <normaloff>:/newPrefix/images/Stop.png</normaloff>:/newPrefix/images/Stop.png</iconset>
       </property>
      </widget>
@@ -47,13 +47,13 @@
        <string/>
       </property>
       <property name="icon">
-       <iconset resource="../resources.qrc">
+       <iconset resource="resources.qrc">
         <normaloff>:/newPrefix/images/Pause.png</normaloff>:/newPrefix/images/Pause.png</iconset>
       </property>
      </widget>
     </item>
     <item row="0" column="5">
-     <widget class="Phonon::SeekSlider" name="seekSlider">
+     <widget class="Phonon::SeekSlider" name="seekSlider" native="true">
       <property name="minimumSize">
        <size>
         <width>301</width>
@@ -90,7 +90,7 @@
      </widget>
     </item>
     <item row="1" column="5">
-     <widget class="Phonon::VolumeSlider" name="volumeSlider">
+     <widget class="Phonon::VolumeSlider" name="volumeSlider" native="true">
       <property name="sizePolicy">
        <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
         <horstretch>0</horstretch>
@@ -113,7 +113,7 @@
      <x>0</x>
      <y>0</y>
      <width>594</width>
-     <height>24</height>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_Open">
@@ -128,6 +128,7 @@
     <property name="title">
      <string>&amp;Help</string>
     </property>
+    <addaction name="infoAction"/>
     <addaction name="aboutAction"/>
    </widget>
    <addaction name="menu_Open"/>
@@ -136,7 +137,7 @@
   <widget class="QStatusBar" name="statusbar"/>
   <action name="openAction">
    <property name="icon">
-    <iconset resource="../resources.qrc">
+    <iconset resource="resources.qrc">
      <normaloff>:/newPrefix/images/Add.png</normaloff>:/newPrefix/images/Add.png</iconset>
    </property>
    <property name="text">
@@ -156,7 +157,7 @@
   </action>
   <action name="exitAction">
    <property name="icon">
-    <iconset resource="../resources.qrc">
+    <iconset resource="resources.qrc">
      <normaloff>:/newPrefix/images/Close.png</normaloff>:/newPrefix/images/Close.png</iconset>
    </property>
    <property name="text">
@@ -165,11 +166,20 @@
   </action>
   <action name="aboutAction">
    <property name="icon">
-    <iconset resource="../resources.qrc">
+    <iconset resource="resources.qrc">
      <normaloff>:/newPrefix/images/Help.png</normaloff>:/newPrefix/images/Help.png</iconset>
    </property>
    <property name="text">
     <string>&amp;About</string>
+   </property>
+  </action>
+  <action name="infoAction">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/newPrefix/images/Info.png</normaloff>:/newPrefix/images/Info.png</iconset>
+   </property>
+   <property name="text">
+    <string>&amp;Info</string>
    </property>
   </action>
  </widget>
@@ -186,7 +196,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../resources.qrc"/>
+  <include location="resources.qrc"/>
  </resources>
  <connections/>
 </ui>
